02 Jul 2003 mipsator
 * added get_lang() as preliminary work on C++ support.
 * fixed a memory fault in pmk and corrected a typo
	(noticed by Ritschard Pierre-Yves)

# PMK 0.5 released

30 Jun 2003 mipsator
 * changes for 0.5

# snapshot 0.4.7

27 Jun 2003 mipsator
 * fixed hash_destroy() to support null pointer as argument
	(noticed by Marek Habersack).
 * fixed use of dirname to avoid modification of the original string under
 	linux (noticed by Marek Habersack).
 * added init of CFLAGS and LIBS alternatives in pmk_chek_config() and
 	pmk_check_pkg_config().

# snapshot 0.4.6

26 Jun 2003 mipsator
 * added override file sample.
 * updated Makefile to use override file sample.
 * added subdir makefile example.
 * rewritten *srcdir and *buiddir computation, seems perfect now.

25 Jun 2003 mipsator
 * updated pmk man page.
 * added option to load a file that override pmk.conf (not tested yet).
 * updated man page.

24 Jun 2003 mipsator
 * added uabspath() in pathtools.
 * added -b option to set basedir.
 * moved pmkfile path in gdata.
 * related misc ...

22 Jun 2003 mipsator
 * added missing snapshots in Changelog.
 * fixed a bug in chkpath().
 * finished (??) to implement srcdir and builddir stuff.
 * now templates are relative to the path of pmkfile.
 * files created from templates are now relative to basedir.
 * modified Makefile to respect basedir.

# snapshot 0.4.5

21 Jun 2003 mipsator
 * added pathtools.c and pathtools.h files.
 * moved relpath() into pathtools.
 * added chkpath() into pathtools.
 * added path_test.c in test directory.
 * added abspath() into pathtools.
 * more support for srcdir and builddir stuff :
 	* added ac_clean_dyn_var().
	* rewritten ac_process_dyn_var().
	* process_template() now process dynamic variables.
	* updated sample makefile to use srcdir and builddir stuff.
 * fixed remaining <string.h> to "compat/string.h".
 * added BONUS file to talk about reusable components of this package.

18 Jun 2003 mipsator