@@ -100,6 +100,7 @@
 #define PREMAKE_KEY_BINPATH	"BIN_PATH"
 #define PREMAKE_KEY_BIN_AR	"BIN_AR"
 #define PREMAKE_KEY_BIN_CAT	"BIN_CAT"
+#define PREMAKE_KEY_BIN_CXX	"BIN_CXX"
 #define PREMAKE_KEY_BIN_GREP	"BIN_GREP"
 #define PREMAKE_KEY_BIN_INSTALL	"BIN_INSTALL"
 #define PREMAKE_KEY_BIN_RANLIB	"BIN_RANLIB"
